# docker-files

./: .gitignore  README.md  docker-files.sln
dotnet/csharp-web-app/: Dockerfile  README.md  csharp-web-app.csproj
dotnet/fsharp-web-app/: Dockerfile  Program.fs  README.md  fsharp-web-app.fsproj
elixir/: README.md
elixir/phx_web_app/: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
elixir/phx_web_app/assets/: tailwind.config.js
elixir/phx_web_app/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/phx_web_app/lib/: phx_web_app.ex  phx_web_app_web.ex
elixir/phx_web_app/lib/phx_web_app/: application.ex  mailer.ex  repo.ex
elixir/phx_web_app/lib/phx_web_app_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
elixir/phx_web_app/lib/phx_web_app_web/components/: core_components.ex  layouts.ex
elixir/phx_web_app/lib/phx_web_app_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
elixir/phx_web_app/priv/repo/: seeds.exs
elixir/phx_web_app/test/: test_helper.exs
elixir/phx_web_app/test/phx_web_app_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
elixir/phx_web_app/test/support/: conn_case.ex  data_case.ex
haskell/: README.md
haskell/nix-app/: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  nix-app.cabal  nix-app.nix
haskell/nix-app/docker/: default.nix
haskell/usingDebian/app/: Dockerfile  README.md
haskell/usingHaskell/app/: Dockerfile  app.cabal  package.yaml
haskell/usingNix/app/: README.md  app.cabal  app.nix  default.nix  package.yaml
haskell/usingNix/app/app/: Main.hs
haskell/usingNix/app/docker/: default.nix
haskell/warp-web-app/: CHANGELOG.md  Dockerfile  README.md  default.nix  index.html  warp-web-app.cabal
haskell/warp-web-app/exe/: Main.hs
haskell/warp-web-app/lib/: MyLib.hs
haskell/warp-web-app/test/: Main.hs
nixos/: README.md
nixos/bun/: Dockerfile  README.md
nixos/deno/: Dockerfile  README.md
nixos/elixir/: Dockerfile  README.md
nixos/go/: Dockerfile  README.md
nixos/haskell/: Dockerfile  README.md
nixos/jdk11/: Dockerfile  README.md
nixos/jdk17/: Dockerfile  README.md
nixos/jdk23/: .dockerignore  Dockerfile  README.md
nixos/llvm/: Dockerfile  README.md
nixos/nodejs-16/: Dockerfile  README.md
nixos/nodejs-23/: Dockerfile  README.md
nixos/ocaml/: Dockerfile  README.md
nixos/rust/: Dockerfile  README.md
nodejs/express-web-app/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  index.js  package.json  tsconfig.json
nodejs/express-web-app/src/: app.ts  server.ts
ocaml/: README.md
ocaml/dream_web_app/: .gitignore  Dockerfile  README.md  README.org  dream_web_app.opam  dune-project
ocaml/dream_web_app/lib/: dune
ocaml/dream_web_app/test/: dune  test_dream_web_app.ml
python/fast-web-app/: Dockerfile  README.md  main.py  pyproject.toml
rust/axum-web-app/: .gitignore  Cargo.toml  Dockerfile  README.md
rust/axum-web-app/src/: main.rs
sbcl/: README.md
sbcl/hunchentoot-web-app/: Dockerfile  README.md  README.org
sbcl/hunchentoot-web-app/src/: main.lisp
(+1 files in other folders)
