cabal-version:      3.12
name:               nix-app
version:            0.1.0.0
homepage:           https://github.com/mingyuchoo/docker-files
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mingyu Choo
maintainer:         mingyuchoo@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    hs-source-dirs:   lib
    build-depends: base >=4.19 && <5
    default-language: Haskell2010

executable nix-app.exe
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   exe
    build-depends:
        base >=4.19 && <5
      , nix-app
      , aeson
      , servant-server
      , warp
    default-language: Haskell2010

test-suite nix-app.test
    type:             exitcode-stdio-1.0
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:
        base >=4.19 && <5
      , nix-app
    default-language: Haskell2010
