cabal-version:      3.12
name:               warp-web-app
version:            0.1.0.0
homepage:           https://github.com/mingyuchoo/docker-files
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mingyu Choo
maintainer:         mingyuchoo@gmail.com
copyright:          2025 Mingyu Choo
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:
        base >=4.19 && <5
      , containers
      , flow
      , http-types
      , parallel
      , wai
      , warp
    hs-source-dirs:   lib
    default-language: Haskell2010

executable warp-web-app
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.19 && <5
      , warp-web-app
      , containers
      , flow
      , http-types
      , parallel
      , wai
      , warp
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite warp-web-app-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.19 && <5
      , warp-web-app
      , containers
      , flow
      , http-types
      , parallel
      , wai
      , warp
