(lang dune 3.20)

(name dream_web_app)

(generate_opam_files true)

(source
 (github mingyuchoo/docker-files))

(authors "Mingyuchoo")

(maintainers "mingyuchoo@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dream_web_app)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
